# dfinity-poc

./: README.md
dfinity_poc/: .gitignore  Cargo.toml  README.md  dfx.json  package-lock.json  package.json  webpack.config.js
dfinity_poc/src/declarations/dfinity_poc/: index.js
dfinity_poc/src/dfinity_poc/: Cargo.toml  lib.rs
dfinity_poc/src/dfinity_poc_assets/assets/: main.css
dfinity_poc/src/dfinity_poc_assets/src/: index.js
rust_hello/: dfx.json  package-lock.json
rust_hello/src/declarations/inter_rs/: index.js  inter_rs.did.d.ts  inter_rs.did.js
rust_hello/src/declarations/rust_hello/: rust_hello.did  rust_hello.did.d.ts  rust_hello.did.js
rust_hello/src/inter_rs/: Cargo.toml  inter_rs.did
rust_hello/src/inter_rs/src/: lib.rs
rust_hello/src/rust_hello/: Cargo.toml  lib.rs  verify_signature.rs
rust_hello/src/rust_hello_assets/assets/: main.css
rust_hello/src/rust_hello_assets/src/: index.html  index.js
rust_ic_agent/: Cargo.toml
rust_ic_agent/src/: dkg.rs  main.rs  main_bck.rs  main_bck2.rs
