[package]
name = "dfinity_poc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]
path="lib.rs"

[dependencies]
secp256k1 = "0.20.3"
hex = "0.4.3"
ic-cdk = "0.3"
ic-cdk-macros = "0.3"
sha256 = "1.0.2"